# rustake

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  cargo-sort.toml  clippy.toml  rustfmt.toml
src/: app.rs  config.rs  error.rs  handlers.rs  main.rs  provider.rs  state.rs  tracing_config.rs
src/assets/: ascii_header.txt
src/auth/: extractors.rs
src/contracts/: staking_pool.rs
src/handlers/: health.rs  rewards.rs  staking.rs
src/import/artifacts/contracts/ERC20Token.sol/: ERC20Token.json
src/import/artifacts/contracts/StakingPool.sol/: StakingPool.dbg.json  StakingPool.json
