[package]
name = "rustake"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
envy = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
ethers = { version = "2", features = ["abigen", "ws"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros"] }
jsonwebtoken = "9"
prometheus = "0.13"
utoipa = "4"
utoipa-swagger-ui = "5"
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "cors"] }
uuid = { version = "1", features = ["v4"] }
owo-colors = "4"
