[package]
name = "rustake"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core + Error Handling
anyhow = "1"
once_cell = "1.21.3"

# Web Server / HTTP
axum = "0.7"

# Env Config
dotenvy = "0.15"
envy = "0.4"

# Blockchain / Ethereum
ethers = "2.0"
k256 = "0.13"

# Auth
jsonwebtoken = "9"

# Monitoring / Docs
prometheus = "0.13"

# Serialization / Deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros"] }
thiserror = "1"

# Async Runtime
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "cors"] }

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = "4"
utoipa-swagger-ui = "5"
uuid = { version = "1", features = ["v4"] }

# Flair ✨
owo-colors = "4"
